--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
   
     <div class="center_div">
-      <h1>Hello World!</h1>
+      <h1>Gaffel</h1>
       <p>This example contains some advanced CSS methods you may not have learned yet. But, we will explain these methods in a later chapter in the tutorial.</p>
     </div>
     
