--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <p>THIS example contains some advanced CSS methods you may not have learned yet. But, we will explain these methods in a later chapter in the tutorial.</p>
     </div>
 
-    <iframe src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik"></iframe>
+    <iframe src="https://gaffelmagasin.blogspot.com/"></iframe>
 
   </body>
 </html>
