--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         text-align: left;
         padding: 8px;
       }
+
+      iframe 
+      {
+       display: block; 
+       width: 100%; 
+       border: none; 
+       overflow-y: auto; 
+       overflow-x: hidden;
+      }
     </style>
   </head>
   <body>
