--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p>THIS example contains some advanced CSS methods you may not have learned yet. But, we will explain these methods in a later chapter in the tutorial.</p>
     </div>
 
-    <iframe src="https://gaffelmagasin.blogspot.com/"></iframe>
+    <iframe src="https://gaffelmagasinsuperhemlig.blogspot.com/"></iframe>
 
   </body>
 </html>
