--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       iframe 
       {
        display: block; 
-       width: 100%; 
+       width: 100%;
+       height: 100%;
        border: none; 
        overflow-y: auto; 
        overflow-x: hidden;
