--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        width: 100%;
        height: 100%;
        border: none; 
-       overflow-y: auto; 
+       overflow-y: hidden; 
        overflow-x: hidden;
       }
     </style>
