--- a/index.html
+++ b/index.html
@@ -22,17 +22,12 @@
        width: 100%;
        height: 100%;
        border: none; 
-       overflow-y: hidden; 
-       overflow-x: hidden;
+       overflow-y: visible; 
+       overflow-x: visible;
       }
     </style>
   </head>
   <body>
-  
-    <div class="center_div">
-      <h1>Gaffel</h1>
-      <p>THIS example contains some advanced CSS methods you may not have learned yet. But, we will explain these methods in a later chapter in the tutorial.</p>
-    </div>
 
     <iframe src="https://gaffelmagasinsuperhemlig.blogspot.com/"></iframe>
 
