--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       
       .iframe 
       {
-       display: block; 
+       display: flex; 
        width: 100%;
        height: 100%;
        border: none; 
