--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
-<!DOCTYPE html>
-<html>
-  <head>
-   
-  </head>
+<!DOCTYPE html> 
+<html> 
 
-   <style>
+<head> 
+	<title>full screen iframe</title> 
+	<style type="text/css"> 
+		html { 
+			overflow: auto; 
+		} 
+		
+		html, 
+		body, 
+		div, 
+		iframe { 
+			margin: 0px; 
+			padding: 0px; 
+			height: 100%; 
+			border: none; 
+		} 
+		
+		iframe { 
+			display: block; 
+			width: 100%; 
+			border: none; 
+			overflow-y: auto; 
+			overflow-x: hidden; 
+		} 
+	</style> 
+</head> 
 
-    </style>
-  
-  <body>
+<body> 
+	<iframe src="https://en.wikipedia.org/wiki/HTML_element#Frames"
+			frameborder="0"
+			marginheight="0"
+			marginwidth="0"
+			width="100%"
+			height="100%"
+			scrolling="auto"> 
+</iframe> 
 
-    <iframe src="https://gaffelmagasinsuperhemlig.blogspot.com/"></iframe>
+</body> 
 
-  </body>
-</html>
+</html> 
