--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 </head> 
 
 <body> 
-	<iframe src="https://en.wikipedia.org/wiki/HTML_element#Frames"
-			frameborder="0"
-			marginheight="0"
-			marginwidth="0"
-			width="100%"
-			height="100%"
-			scrolling="auto"> 
+	<iframe src="https://gaffelmagasinsuperhemlig.blogspot.com/"
+	frameborder="0"
+	marginheight="0"
+	marginwidth="0"
+	width="100%"
+	height="100%"
+	scrolling="auto"> 
 </iframe> 
 
 </body> 
