--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 
 <head> 
-	<title>full screen iframe</title> 
+	<title>GAFFEL</title> 
 	<style type="text/css"> 
 		html { 
 			overflow: auto; 
