--- a/index.html
+++ b/index.html
@@ -25,18 +25,25 @@
 			overflow-y: auto; 
 			overflow-x: hidden; 
 		} 
+	
+		cover_img{
+			
+			
+		}
 	</style> 
 </head> 
 
 <body> 
+	<img src="https://imgur.com/a/UcVCqIQ">
+	
 	<iframe src="https://gaffelmagasinsuperhemlig.blogspot.com/"
-	frameborder="0"
-	marginheight="0"
-	marginwidth="0"
-	width="100%"
-	height="100%"
-	scrolling="auto"> 
-</iframe> 
+		frameborder="0"
+		marginheight="0"
+		marginwidth="0"
+		width="100%"
+		height="100%"
+		scrolling="auto"> 
+	</iframe> 
 
 </body> 
 
