--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head> 
 
 <body> 
-	<img src="https://imgur.com/a/UcVCqIQ">
+	<img src="https://imgur.com/a/UcVCqIQ" alt="gaffel">
 	
 	<iframe src="https://gaffelmagasinsuperhemlig.blogspot.com/"
 		frameborder="0"
