--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 			overflow-x: hidden; 
 		} 
 	
-		cover_img{
-			
-			
+		img {
+		  display: block;
+		  margin-left: auto;
+		  margin-right: auto;
+		  width: 50%;
 		}
 	</style> 
 </head> 
