--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			display: block; 
 			width: 100%; 
 			border: none; 
-			overflow-y: auto; 
+			overflow-y: hidden; 
 			overflow-x: hidden; 
 		} 
 	
