--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 		iframe { 
 			margin: 0px; 
 			padding: 0px; 
-			height: 100%; 
+			height: auto; 
 			border: none; 
 		} 
 		
 		iframe { 
-			display: flex; 
+			display: block; 
 			width: 100%; 
 			border: none; 
 			overflow-y: hidden; 
