--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		iframe { 
 			margin: 0px; 
 			padding: 0px; 
-			height: auto; 
+			height: 100%; 
 			border: none; 
 		} 
 		
@@ -43,7 +43,7 @@
 		marginheight="0"
 		marginwidth="0"
 		width="100%"
-		height="100%"
+		height="auto"
 		scrolling="no"> 
 	</iframe> 
 
