--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 		marginheight="0"
 		marginwidth="0"
 		width="100%"
-		height="auto"
-		scrolling="no"> 
+		height="100%"
+		scrolling="auto"> 
 	</iframe> 
 
 	<p>GAFFEL</p>
