--- a/index.html
+++ b/index.html
@@ -3,51 +3,25 @@
 
 <head> 
 	<title>GAFFEL</title> 
-	<style type="text/css"> 
-		html { 
-			overflow: auto; 
-		} 
-		
-		html, 
-		body, 
-		div, 
-		iframe { 
-			margin: 0px; 
-			padding: 0px; 
-			height: 100%; 
-			border: none; 
-		} 
-		
-		iframe { 
-			display: block; 
-			width: 100%; 
-			border: none; 
-			overflow-y: hidden; 
-			overflow-x: hidden; 
-		} 
-	
-		img {
-		  display: block;
-		  margin-left: auto;
-		  margin-right: auto;
-		  width: 50%;
-		}
-	</style> 
 </head> 
 
 <body> 
-	<img src="https://i.imgur.com/IOHEm2x.png" alt="gaffel">
-	
-	<iframe src="https://gaffelmagasinsuperhemlig.blogspot.com/"
-		frameborder="0"
-		marginheight="0"
-		marginwidth="0"
-		width="100%"
-		height="100%"
-		scrolling="auto"> 
-	</iframe> 
-
-	<p>GAFFEL</p>
+	<iframe
+	  src="https://www.example.com"
+	  style="
+	    position: fixed;
+	    top: 0px;
+	    bottom: 0px;
+	    right: 0px;
+	    width: 100%;
+	    border: none;
+	    margin: 0;
+	    padding: 0;
+	    overflow: hidden;
+	    z-index: 999999;
+	    height: 100%;
+	  ">
+	</iframe>
 </body> 
 
 </html> 
