--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body> 
 	<iframe
-	  src="https://www.example.com"
+	  src="https://gaffelmagasin.blogspot.com/"
 	  style="
 	    position: fixed;
 	    top: 0px;
