--- a/index.html
+++ b/index.html
@@ -1,27 +1,11 @@
-<!DOCTYPE html> 
-<html> 
-
-<head> 
-	<title>GAFFEL</title> 
-</head> 
-
-<body> 
-	<iframe
-	  src="https://gaffelmagasin.blogspot.com/"
-	  style="
-	    position: fixed;
-	    top: 0px;
-	    bottom: 0px;
-	    right: 0px;
-	    width: 100%;
-	    border: none;
-	    margin: 0;
-	    padding: 0;
-	    overflow: hidden;
-	    z-index: 999999;
-	    height: 100%;
-	  ">
-	</iframe>
-</body> 
-
-</html> 
+<!DOCTYPE html>
+	<html lang="en">
+	<meta charset="UTF-8">
+	<title>Page Title</title>
+	<style>
+	</style>
+	
+	<body>
+		<p>Hello</p>
+	</body>
+</html>
