--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
-<p>Gaffel</p>
- 
+ <p>Gaffel</p>
+ <script>
+  document.getElementById("demo").innerHTML = "Hello JavaScript!";
+ </script>
 </html>
