--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
          <script src="https://unpkg.com/rss-parser/dist/rss-parser.min.js"></script>
          <script>
              let parser = new RSSParser();
-             parser.parseURL('https://wordpress.com/blog/feed/', function(err, feed) {
+             parser.parseURL('https://blogspot.com/feeds/posts/default', function(err, feed) {
                  if (err) throw err;
                  console.log(feed.title);
                  feed.items.forEach(function(entry) {
