--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
           <p>Gaffel</p>
           <div id="rss-feed"></div>
           <script>
-               fetch('https://gaffelmagasinsuperhemlig.blogspot.com/feeds/posts/default')
+               
+               fetch('https://cors-anywhere.herokuapp.com/https://gaffelmagasinsuperhemlig.blogspot.com/feeds/posts/default')
                  .then(function(resp) { return resp.text() })
                  .then(function(xml) { return (new window.DOMParser()).parseFromString(xml, "text/xml") })
                  .then(function(resp) {
