--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
                  .then(function(resp) { return resp.text() })
                  .then(function(xml) { return (new window.DOMParser()).parseFromString(xml, "text/xml") })
                  .then(function(resp) {
-               
+
+                    console.log('nils');
+                      
                    const items = resp.getElementsByTagName('item')
                    let buffer = "";
                    for (var x = 0; x < items.length && x < 5; x++) {
