--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
           <div id="rss-feed"></div>
           <script>
                
-               fetch('https://cors-anywhere.herokuapp.com/https://gaffelmagasinsuperhemlig.blogspot.com/feeds/posts/default')
+               fetch('https://cors-anywhere.herokuapp.com/https://gaffelmagasinsuperhemlig.blogspot.com/feeds/posts/default?alt=rss')
                  .then(function(resp) { return resp.text() })
                  .then(function(xml) { return (new window.DOMParser()).parseFromString(xml, "text/xml") })
                  .then(function(resp) {
 
-                    console.log('nils');
+                    console.log();
                       
                    const items = resp.getElementsByTagName('item')
                    let buffer = "";
