--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
           <p>Gaffel</p>
           <div id="rss-feed"></div>
           <script>
-               const url = 'https://corsproxy.io/?' + encodeURIComponent('https://gaffelmagasinsuperhemlig.blogspot.com/feeds/posts/default?alt=rss';
+               const url = 'https://corsproxy.io/?' + encodeURIComponent('https://gaffelmagasinsuperhemlig.blogspot.com/feeds/posts/default?alt=rss');
                log(url);
-               fetch(url))
+               fetch(url)
                  .then(function(resp) { return resp.text() })
                  .then(function(xml) { return (new window.DOMParser()).parseFromString(xml, "text/xml") })
                  .then(function(resp) {
