--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           <div id="rss-feed"></div>
           <script>
                const url = 'https://corsproxy.io/?' + encodeURIComponent('https://gaffelmagasinsuperhemlig.blogspot.com/feeds/posts/default?alt=rss');
-               log(url);
+               console.log(url);
                fetch(url)
                  .then(function(resp) { return resp.text() })
                  .then(function(xml) { return (new window.DOMParser()).parseFromString(xml, "text/xml") })
