--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
           <p>Gaffel</p>
           <div id="rss-feed"></div>
           <script>
-               //const url = 'https://corsproxy.io/?' + encodeURIComponent('https://gaffelmagasinsuperhemlig.blogspot.com/feeds/posts/default?alt=rss');
-               const url = 'https://gaffelmagasinsuperhemlig.blogspot.com/feeds/posts/default?alt=rss';
+               const url = 'https://corsproxy.io/?' + encodeURIComponent('https://gaffelmagasinsuperhemlig.blogspot.com/feeds/posts/default?alt=rss');
                console.log(url);
                fetch(url)
                  .then(function(resp) { return resp.text() })
