--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           <p>Gaffel</p>
           <div id="rss-feed"></div>
           <script>
-               const url = 'https://feeds.feedburner.com/gaffelmagasinsuperhemlig/jdk5KckZnGp');
+               const url = 'https://feeds.feedburner.com/gaffelmagasinsuperhemlig/jdk5KckZnGp';
 
                fetch(url)
                  .then(function(resp) { return resp.text() })
