--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
           .then(text => {
               lines = text.split("\n")
           }
+
+          console.log(lines);
     </script>
 </body>
  
