--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     
     <script>
-          fetch("data.txt")
-          .then(r=>r.text())
+          fetch("data.txt");
+          .then(r=>r.text());
           .then(text => {
-              lines = text.split("\n")
+              lines = text.split("\n");
           }
 
           console.log(lines);
