--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             return myText;
           }
           
-          console.log(getText('data.txt'););
+          console.log(getText('data.txt'));
     </script>
 </body>
  
