--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	let text = "How are you doing today?";
 	const myArray = text.split(" ");
 		  
-          console.log();
+        console.log(myArray);
     </script>
 </body>
  
