--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     
     <script>
         fetch("data.txt")
-	.then(r=>r.text())
-	.then(text => {
-	    lines = text.split("\n")
-	}
+		.then(r=>r.text())
+		.then(text => {lines = text.split("\n")}
+	
 	//let allt = getText('data.txt');
 	//const myArray = allt.split(" ");
 		  
