--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		return str;
 	}
 
-	console.log(readTextFile('data.txt'));
+	console.log(readTextFile("/data.txt"));
 	//let allt = getText('data.txt');
 	//const myArray = allt.split(" ");
 		  
