--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		console.log(data);
 	    });
 
-	const artikel_array = artiklar.split("§");
+	const artikel_array = artiklar.split(" ");
 	console.log(artikel_array);	  
 
     </script>
