--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 	    })
 	    .then(function (data) {
 	        artiklar = data;
-		console.log(data);
+		
 	    });
 
-	const artikel_array = artiklar.split(" ");
-	console.log(artikel_array);	  
+	console.log(artiklar);
+	console.log(typeof artiklar);
+	
 
     </script>
 </body>
