--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 	        return res.text();
 	    })
 	    .then(function (data) {
-	        artiklar = data;
+	        console.log(data)
 		
 	    });
+	    .then(data => {
+	    	artiklar = data;
+	    })
 
 	console.log(artiklar);
 	console.log(typeof artiklar);
