--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	    	artiklar = data;
 	    });
 
-	console.log(artiklar);
+	console.log("artiklar:" + artiklar);
 	console.log(typeof artiklar);
 	
 
