--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	    })
 	    .then(function (data) {
 	        console.log(data)
-		
+		artiklar = data;
 	    })
 	    .then(data => {
 	    	artiklar = data;
