--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
  
 <body>
-    <div class ='rss-feed'></div>
+    <div id ='rss-feed'></div>
     <script>
 
 	fetch('https://rss.nytimes.com/services/xml/rss/nyt/Technology.xml')
