--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 	fetch('data.txt')
 	  .then(function(resp) { 
-		  return resp.text()
 		  console.log(resp.text());
+		  return resp.text()
 	   })
 	  .then(function(xml) { return (new window.DOMParser()).parseFromString(xml, "text/xml") })
 	  .then(function(resp) {
@@ -22,7 +22,7 @@
 	    const items = resp.getElementsByTagName('item')
 	    let buffer = "";
 	    for (var x = 0; x < items.length && x < 5; x++) {
-	
+	      console.log(x);
 	      const title = items[x].getElementsByTagName('titel')[0].textContent
 	      const date = items[x].getElementsByTagName('ingress')[0].textContent
 	      const content = items[x].getElementsByTagName('text')[0].textContent
