--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		console.log(resp);
 	    
 	
-	    document.getElementById('rss-feed').innerHTML = buffer
+	    //document.getElementById('rss-feed').innerHTML = buffer
 	  })
 	
 
