--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	   })
 	  .then(function(resp) {
 		console.log(resp);
-	    
+
+		console.log(readLines(resp));
 	
 	    //document.getElementById('rss-feed').innerHTML = buffer
 	  })
