--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 		console.log(str);
 
 		console.log(str.length);
+		
+		for (let i = 0; i < str.length; i++) {
+		  console.log("P");
+		}
+		
 	
 	    //document.getElementById('rss-feed').innerHTML = buffer
 	  })
