--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 		console.log(str.length);
 		
 		while(i < str.length){
-			var index = str.indexOf("artikel");
+			var index = str.indexOf("<artikel>");
+			console.log(index);
 			i = index;
 			if(index == -1){
 				i = str.length;
