--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		console.log(str);
 
 		console.log(str.length);
-		
+		var i = 0;
 		while(i < str.length){
 			var index = str.indexOf("<artikel>");
 			console.log(index);
