--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		while(i < str.length){
 			var index = str.indexOf("<artikel>");
 			console.log(index);
-			i = index;
+			i = index+1;
 			if(index == -1){
 				i = str.length;
 			}
