--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
 
 		console.log(str.length);
 		var i = 0;
-		while(i < str.length){
+		var looks = 0;
+		while(i < str.length and looks < 50){
 			var index = str.indexOf("<artikel>");
 			console.log(index);
 			i = index+1;
 			if(index == -1){
 				i = str.length;
 			}
+			looks++;
 		}
 		
 	
