--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		console.log(str.length);
 		var i = 0;
 		var looks = 0;
-		while(i < str.length and looks < 50){
+		while(i < str.length && looks < 50){
 			var index = str.indexOf("<artikel>");
 			console.log(index);
 			i = index+1;
