--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
 		console.log(str.length);
 		var i = 0;
 		var looks = 0;
-		while(i < str.length && looks < 50){
+		while(i < str.length){
 			var index = str.indexOf("<artikel>",i);
-			console.log(index);
+			
 			i = index+1;
 			if(index == -1){
 				i = str.length;
 			}
-			looks++;
+			else{
+				var end_index = str.indexOf("</artikel>",index);
+				console.log(index);
+				console.log(end_index);
+			}
 		}
 		
 	
