--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			}
 			else{
 				var end_index = str.indexOf("</artikel>",index);
-				console.log(index);
-				console.log(end_index);
+				var content = str.substr(index,end_index);
+				console.log(content);
 			}
 		}
 		
