--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 			else{
 				var end_index = str.indexOf("</artikel>",index);
 				var content = str.substr(index,end_index);
+				console.log(str);
+				
 				console.log(index);
 				console.log(end_index);
 				console.log(content);
