--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
  
 <body>
-    <div id ='rss-feed'></div>
+    <div id ='blogg_inlägg'></div>
     <script>
 
 	fetch('data.txt')
@@ -43,7 +43,7 @@
 		}
 		
 	
-	    //document.getElementById('rss-feed').innerHTML = buffer
+	    //document.getElementById('blogg_inlägg').innerHTML = buffer
 	  })
 	
 
