--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			}
 			else{
 				var end_index = str.indexOf("</artikel>",index);
-				var content = str.substr(index,end_index);
+				var content = str.substring(index,end_index);
 				
 				console.log(index);
 				console.log(end_index);
