--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	   })
 	  .then(function(resp) {
 		var a_str = resp;
-		console.log(str);
+		console.log(a_str);
 
-		console.log(str.length);
+		console.log(a_str.length);
 		var i = 0;
 		var looks = 0;
 		var article_i = 0
