--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	function content_of_tag(str,tag,start){
 		
 	}
+
+	var buffer = ´´
 	    
 	fetch('data.txt')
 	  .then(function(resp) { 
@@ -47,7 +49,7 @@
 		}
 		
 	
-	    //document.getElementById('blogg_inlägg').innerHTML = buffer
+	    document.getElementById('blogg_inlägg').innerHTML = buffer
 	  })
 	
 
