--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script>
 
 	function content_of_tag(str,tag,start){
-		var start_index = str.indexOf("<" + tag + ">",start) + tag.length() + 2;
+		var start_index = str.indexOf("<" + tag + ">",start) + tag.length + 2;
 		var end_index =   str.indexOf("</" + tag + ">",start);
 		if(start_index == -1 || end_index == -1){return -1;}
 		var content = str.substring(start_index,end_index);
