--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				console.log(content);
 
 				var titel = content_of_tag("titel",start_index,end_index);
-				return titel;
+				console.log(titel);
 				
 				article_i++
 			}
