--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		let start_index = str.indexOf("<" + tag + ">",start) + tag.length + 2;
 		let end_index =   str.indexOf("</" + tag + ">",start);
 		if(start_index == -1 || end_index == -1){return -1;}
-		let content = str.substring(start_index_c,end_index_c);
+		let content = str.substring(start_index,end_index);
 		return content;
 	}
 
