--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 				console.log(content);
 
-				var titel = content_of_tag(a_str,"titel",start_index);
+				var titel = content_of_tag(content,"titel",start_index);
 				console.log(titel);
 				
 				article_i++
