--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 				console.log(content);
 
-				var titel = content_of_tag(content,"titel",start_index);
+				var titel = content_of_tag(content,"titel",0);
 				console.log(titel);
 				
 				article_i++
