--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
 				//console.log(titel);
 				//console.log(preamble);
 
-				
+				buffer += `<div style="
+			        margin:10px; padding: 5px; background: #ebebebff; border-left: 4px solid #a2a2a2ff;
+			      ">
+			        <div>${titel}</div>
+			        <div style="font-size:small">${preamble}</div>
+			      </div>`
 
 				
 				article_i++
