--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
 				//console.log(titel);
 				//console.log(preamble);
 
-				buffer += `<div style="
-			        margin:10px; padding: 5px; background: #ebebebff; border-left: 4px solid #a2a2a2ff;
-			      ">
+				buffer += `<div style="margin:10px; padding: 5px; background: #ebebebff;">
 			        <div>${titel}</div>
 			        <div style="font-size:small">${preamble}</div>
 			      </div>`
