--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				//console.log(preamble);
 
 				buffer += `<div style="margin:10px; padding: 5px; background: #ebebebff;">
-			        <div style = "font-family = newsagent">${titel}</div>
+			        <h1>${titel}</h1>
 			        <div style="font-size:small">${preamble}</div>
 			      </div>`
 
