--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		  font-family: newsagent;
 		  src: url(Newsagent-Regular.ttf) format("truetype");
 		}
-		
+		h1 {
+		  font-family: newsagent;
+		}
 	</style>
 </head>
  
