--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		}
 		.blogg_titel {
 		  font-family: newsagent;
-		  font-size: 500;
+		  font-size: 50px;
 		}
 	</style>
 </head>
@@ -67,9 +67,9 @@
 				//console.log(preamble);
 
 				buffer += `<div style="margin:10px; padding: 5px; background: #ebebebff;">
-			        <div class = "blogg_titel">${titel}</div>
-			        <div style="font-size:small">${preamble}</div>
-			      </div>`
+			        	<div class = "blogg_titel">${titel}</div>
+			        	<div style="font-size:small">${preamble}</div>
+			        </div>`
 
 				
 				article_i++
