--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 			width: 200px;
 			background: #ffff00ff;
 		}
+		.blog_img::after{
+		    content: "";
+		    display: table;
+		    clear: both;
+		}
 		.blog_title {
 		  font-family: newsagent;
 		  font-size: 50px;
