--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			width: 200px;
 			background: #ffff00ff;
 		}
-		.blog_img::after{
+		.blog_cont::after{
 		    content: "";
 		    display: table;
 		    clear: both;
