--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 		}
 		.blog_img{
 			float: right;
-			width: 200px;
+			width: 560px;
+			height: 315px;
 			background: #ffff00ff;
 		}
 		.blog_cont::after{
