--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		}
 		.blog_img{
 			float: right;
-			width: 560px;
-			height: 315px;
+			size: automatic;
+			aspect-ratio: 560 / 315;
 			background: #101010ff;
 		}
 		.blog_cont::after{
