--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
  
 <body>
     <div id ='blogg_inlägg'></div>
-    <script>
+    <iframe id="game-iframe" src="https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld" width="600" height="500" title="drakens-varld"></iframe>
+	<script>
 
 	function content_of_tag(str,tag,start){
 		let start_index = str.indexOf("<" + tag + ">",start);
