--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		}
 		.blog_img{
 			float: right;
-			size: automatic;
+			size: auto;
 			aspect-ratio: 560 / 315;
 			background: #101010ff;
 		}
