--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			        		<div style="font-size:small">${preamble}</div>
       					</div>
 	   				<div class = blog_img>
-						<p>hjälp</p>
+						<img src = "https://i.imgur.com/4RzXsjc.png"></img>
  					</div>
 			        </div>`
 
