--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 		  src: url(Newsagent-Regular.ttf) format("truetype");
 		}
 		.blog_cont{
-			height: 100%;
 			margin:10px; 
 			background: #ebebebff;
-			max-height: 315px;
+			height: 315px;
 		}
 		.blog_row {
 			float: left;
@@ -23,7 +22,8 @@
 		}
 		.blog_img{
 			float: right;
-			size: auto;
+			width: auto;
+			height: 100%;
 			background: #101010ff;
 		}
 		.blog_cont::after{
