--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		.blog_img{
 			float: right;
 			width: auto;
-			height: 10%;
+			height: 315px;
 			background: #101010ff;
 		}
 		.blog_cont::after{
