--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
      						<div class = "blog_title">${titel}</div>
 			        		<div style="font-size:small">${preamble}</div>
       					</div>
-	   				<div class = blog_img>
-						<img src = "https://i.imgur.com/4RzXsjc.png"></img>
- 					</div>
+					<img src = "https://i.imgur.com/4RzXsjc.png" class = blog_img></img>
 			        </div>`
 
 				
