--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 		  font-family: newsagent;
 		  src: url(Newsagent-Regular.ttf) format("truetype");
 		}
+		.blog_area{
+			background: #010101ff;
+			margin: 10px;
+			width: 1000px;
+		}
 		.blog_cont{
 			margin:10px; 
 			background: #ebebebff;
@@ -24,7 +29,7 @@
 			float: right;
 			width: auto;
 			height: 315px;
-			background: #101010ff;
+			background: #505050ff;
 		}
 		.blog_cont::after{
 		    content: "";
@@ -39,7 +44,7 @@
 </head>
  
 <body>
-    <div id ='blogg_inlägg'></div>
+    <div id ='blogg_inlägg' class = blog_area></div>
     <!-- <iframe id="game-iframe" src="https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld" width="600" height="500" title="drakens-varld"></iframe> -->
 	<script>
 
