--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 			height: 315px;
 		}
 		.blog_row {
+			margin: 15px;
 			float: left;
-			background: #ff0000ff;
+			background: #000000ff;
 		}
 		.blog_img{
 			float: right;
@@ -38,7 +39,7 @@
 		}
 		.blog_title {
 		  font-family: newsagent;
-		  font-size: 50px;
+		  font-size: 100px;
 		}
 	</style>
 </head>
