--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 		.blog_cont{
 			margin:10px; 
 			background: #ebebebff;
-			height: 315px;
+			height: auto;
 		}
 		.blog_row {
 			margin: 15px;
 			float: left;
 			background: #000000ff;
+			width: 66%;
 		}
 		.blog_img{
 			float: right;
-			width: auto;
-			height: 315px;
+			width: 33%;
 			background: #505050ff;
 		}
 		.blog_cont::after{
