--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		.blog_title {
 		  font-family: newsagent;
 		  font-size: 70px;
+		  line-height: 70%;
 		  color: #FFFFFFFF;
 		}
 		.blog_preamble{
