--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 		  font-family: newsagent;
 		  src: url(Newsagent-Regular.ttf) format("truetype");
 		}
+		@font-face {
+		  font-family: morfeta;
+		  src: url(MorfetaGealmord-5158V.otf) format("opentype");
+		}
+		
 		.blog_area{
 			background: #010101ff;
 			margin: 10px;
@@ -38,7 +43,7 @@
 		    clear: both;
 		}
 		.blog_title {
-		  font-family: newsagent;
+		  font-family: morfeta;
 		  font-size: 70px;
 		  line-height: 70%;
 		  color: #FFFFFFFF;
