--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 
 				var article_index = content_of_tag(content,"index",0);
 				var titel = content_of_tag(content,"titel",0);
+				titel = titel.toUpperCase();
 				var preamble = content_of_tag(content,"ingress",0);
 				//console.log(article_index);
 				//console.log(titel);
