--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 		}
 		.blog_cont{
 			margin:10px; 
-			background: #ebebebff;
+			background: #000000ff;
 			height: auto;
 		}
 		.blog_row {
-			margin: 15px;
+			margin: 5vw;
 			float: left;
 			background: #000000ff;
 			width: 40%;
