--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
 		
 		.blog_area{
 			background: #010101ff;
-			margin: 5vw;
+			margin-left: 5vw;
 			width: 1000px;
 		}
 		.blog_cont{
 			margin:10px; 
 			background: #000000ff;
-			height: auto;
 		}
 		.blog_row {
 			margin: 15px;
