--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			width: 1000px;
 		}
 		.blog_cont{
-			margin:10px; 
+			margin: 10px;
+			margin-top: 10px;
 			background: #000000ff;
 		}
 		.blog_row {
