--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		  font-family: morfeta;
 		  src: url(MorfetaGealmord-5158V.otf) format("opentype");
 		}
-		
+		.body{
+			color: #044827FF;
+		}
 		.blog_area{
 			background: #010101ff;
 			margin-left: 5vw;
