--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			width: 1000px;
 		}
 		.blog_cont{
-			margin-down: 10px;
+			margin-bottom: 10px;
 			background: #000000ff;
 		}
 		.blog_row {
