--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		  src: url(MorfetaGealmord-5158V.otf) format("opentype");
 		}
 		.body{
-			background: #044827FF;
+			background-color: #044827FF;
 		}
 		.blog_area{
 			background: #010101ff;
