--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 		  font-family: morfeta;
 		  src: url(MorfetaGealmord-5158V.otf) format("opentype");
 		}
-		.body{
+		
+		body{
 			background-color: #044827FF;
 		}
+		
 		.blog_area{
 			background: #010101ff;
 			margin-left: 5vw;
