--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		.blog_area{
 			background: #010101ff;
 			margin-left: 5vw;
-			width: clamp(50,90vw,1000px);
+			width: clamp(50px,90vw,1000px);
 		}
 		.blog_cont{
 			margin-bottom: 10px;
