--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 		}
 		.blog_title {
 		  font-family: morfeta;
-		  font-size: 50px;
+		  font-size: 5%;
 		  line-height: 83%;
 		  color: #FFFFFFFF;
 		}
 		.blog_preamble{
-			font-size = 20px;
+			font-size: 2%;
 			color: #FFFFFFFF;
 		}
 	</style>
